# ai-builder

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  package-lock.json
backend/app-api/: README.md  conftest.py  pyproject.toml
backend/app-api/src/api/app/: __init__.py  main.py
backend/app-api/src/api/app/core/: __init__.py  config.py  database.py  exceptions.py
backend/app-api/src/api/app/router/: __init__.py
backend/app-api/src/api/app/router/auth/: __init__.py  me.py
backend/app-api/src/api/app/routers/: __init__.py
backend/app-api/src/api/app/routers/auth/: __init__.py  me.py
backend/app-api/src/api/app/routers/webhook/: __init__.py  clerk.py
backend/app-api/src/api/app/routers/workspace/: __init__.py  workspace_router.py
backend/app-api/src/api/app/schema/: __init__.py
backend/app-api/src/api/app/schema/auth/: __init__.py  account.py
backend/app-api/src/api/app/schemas/: __init__.py
backend/app-api/src/api/app/schemas/auth/: __init__.py  account.py
backend/app-api/src/api/app/schemas/workspace/: __init__.py  workspace_schema.py
backend/app-api/src/api/app/service/auth/: __init__.py  auth_service.py
backend/app-api/src/api/app/services/: __init__.py
backend/app-api/src/api/app/services/account/: __init__.py  (+1 more)
backend/app-api/tests/: __init__.py  test_dependency_chain.py  test_smoke.py  test_webhook_clerk.py  test_workspace.py
backend/common-kernel/: README.md  pyproject.toml
backend/common-kernel/src/kernel/common/: __init__.py
backend/common-kernel/src/kernel/common/enums/: __init__.py
backend/common-kernel/src/kernel/common/models/: __init__.py
(+143 files in other folders)
