[project]
name = "app-api"
version = "0.1.0"
description = "AI Builder FastAPI 应用服务"
requires-python = ">=3.12"
dependencies = [
    "common-kernel",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.30.0",
    "alembic>=1.17.0",
    "pyjwt[crypto]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "testcontainers[postgres]>=4.10.0",
    "coverage>=7.6.0",
]

[tool.uv.sources]
common-kernel = { workspace = true }

[project.scripts]
app-api = "api.app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
