[project]
name = "common-kernel"
version = "0.1.0"
description = "AI Builder 公共基础库模块"
requires-python = ">=3.12"
dependencies = [
    "arksou-kernel-framework[all]",
]

[tool.uv.sources]
arksou-kernel-framework = { git = "ssh://git@github-arksou/arksou-Ltd/arksou-kernel-framework.git", tag = "v0.3.5" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel"]
